# CyberBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
documents/: Privacy_Decision Tree.txt
documents/A. Cryptographic Tools/MPC/: 2011-566.txt  2016-421.txt  2020-1203.txt  2023-1098.txt  2024-1347.txt  2024-202.txt  3133956.txt  3302424.txt  3548606.txt  43920574.txt  Secret_Sharing_MPC_on_FPGAs_in_the_Datacenter.txt  sec24summer-prepub-278-liu-fengrun.txt  smartFHE_Privacy-Preserving_Smart_Contracts_from_Fully_Homomorphic_Encryption.txt
documents/A. Cryptographic Tools/PKE/: B02.txt  Rsapaper.txt  encsearch.txt
documents/B. Differential Privacy/Central and Local DP/: 1.txt  15-135.txt  1907 (1).txt  1907.txt  3357713.txt  513274_1_En_2_Chapter.txt
documents/B. Differential Privacy/Epsilon Budgeting/: 1402.txt  1610.txt  7758-Article Text-11287-1-2-20201228.txt  muldoon-acharya-2012-analysis-of-k-and-epsilon-budgets-for-film-cooling-using-direct-numerical-simulation.txt  popets-2019-0011.txt  s10479-023-05539-4.txt
documents/C. Anonymization/k‑Anonymity/: 1055558.txt  2004-24.txt  achieving-k-anonymity-privacy-protection-using-generalization-and-suppression.txt  document.txt  jamia_15_5_627.txt  s00778-006-0039-5.txt
documents/C. Anonymization/l‑Diversity/: 1-s2.txt  1217299.txt  Linear_Cryptanalysis_for_Block_Ciphers.txt  s10115-010-0311-2.txt  t_Closeness_Privacy_Beyond_k_Anonymity_a.txt
documents/C. Anonymization/t‑Closeness/: 1-s2 (1).txt  1301.txt  1512.txt  1911.txt
src/: main.py  prompts.py  test_anthropic.py
(+62 files in other folders)
